--- a/Dicey-Business/dicey.css
+++ b/Dicey-Business/dicey.css
@@ -1,10 +1,16 @@
 #die-container {
-    display: inline;
+    margin: 2vh;
     justify-content: flex-start;
 }
 
 .die {
-    height: 60px;
-    width: 60px;
+    display: inline-block !important;
+    height: 60px !important;
+    width: 60px !important;
     border: 1px solid black;
+    margin: 4px;
+}
+
+.ready-to-delete {
+    background-color: red;
 }
