found solution for removing deleted dice from the array of dice objects.

--- a/Dicey-Business/dicey.css
+++ b/Dicey-Business/dicey.css
@@ -1,6 +1,7 @@
 #die-container {
     margin: 2vh;
     justify-content: flex-start;
+    margin: 4px;
 }
 
 .die {
@@ -11,6 +12,6 @@
     margin: 4px;
 }
 
-.ready-to-delete {
+.deletion-flag {
     background-color: red;
 }
