--- a/Dicey-Business/dicey.css
+++ b/Dicey-Business/dicey.css
@@ -1,17 +1,97 @@
+body {
+    margin: 0;
+}
+
+.row {
+    margin-top: 1vh;
+}
+.col {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+
+
 #die-container {
     margin: 2vh;
     justify-content: flex-start;
-    margin: 4px;
+    margin: 1em 1em 8em 1em;
+    width: 90%;
+}
+
+#btn-container {
+    margin-left: 1vh;
+    margin-right: 1vh;
+}
+
+.btn-wrapper {
+    margin: 2vh auto;
+    justify-content: center;
+}
+
+.die-btn {
+    margin: 1em auto;
+    width: 16em !important;
+}
+
+#msg-banner-container {
+    color: #28a745;
+    height: 2.5em;
+}
+
+.die-wrapper {
+    width: 8vh;
+    margin: 1.2em;
+    padding: 0;
 }
 
 .die {
     display: inline-block !important;
-    height: 60px !important;
-    width: 60px !important;
-    border: 1px solid black;
-    margin: 4px;
+    height: 8vh !important;
+    width: 8vh !important;
+    /* border: 1px solid black; */
+    margin: 0 auto;
+    padding: 0;
+    background-size : 103% 103%;
+    background-position : -1px -1px;
+
 }
 
-.deletion-flag {
-    background-color: red;
+/* .tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
 }
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+} */
